Update favicon & metadata

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -71,3 +71,9 @@ body {
 .mat-calendar-body-today:not(.mat-calendar-body-selected):not(.mat-calendar-body-comparison-identical) {
   border-color: #364B7A !important;
 }
+
+.fade-in-up {
+  opacity: 0;
+  transform: translateY(20px);
+  animation: fadeUp 0.8s ease-out forwards;
+}
