--- a/src/app/features/home/home-page/home-page.html
+++ b/src/app/features/home/home-page/home-page.html
@@ -22,7 +22,7 @@
     <div class="max-w-6xl mx-auto px-6">
         <div class="mb-12 text-left md:text-center">
             <h1 class="text-center uppercase mt-1 mb-4">Portfolio</h1>
-            <h2 class="font-serif font-light text-2xl md:text-3xl text-center mb-6 animate-fade-slide-up">
+            <h2 class="font-serif font-light text-2xl md:text-3xl text-center mb-6">
                 From intimate weddings to worldwide travels &#8212; explore a curated selection of my work
             </h2>
         </div>
